force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/Lead_Classifier_Tune_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Lead Classifier Tune Snapshot</label>
    <nameField>
        <displayFormat>LCTS-{00000000}</displayFormat>
        <label>Lead Classifier Tune Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Classifier Tune Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>