force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>When this snapshot was created (typically at Promotion).</description>
    <label>Created At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>