force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Former_Champion_Version__c.field-meta.xml
<CustomField>
    <fullName>Former_Champion_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Classifier version this deployment replaced.</description>
    <label>Former Champion Version</label>
    <referenceTo>Lead_Classifier_Model_Version__c</referenceTo>
    <relationshipLabel>Tune Snapshots Replacing This Version</relationshipLabel>
    <relationshipName>Tune_Snapshots_Replacing_This_Version</relationshipName>
    <type>Lookup</type>
</CustomField>