force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Former_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Former_Model_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The previous champion this tune replaced.</description>
    <label>Former Model Version</label>
    <referenceTo>Lead_Classifier_Model_Version__c</referenceTo>
    <relationshipLabel>Former Model Version</relationshipLabel>
    <relationshipName>Tune_FormerModel_Records</relationshipName>
    <type>Lookup</type>
</CustomField>