force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/New_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>New_Model_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The new Classifier version produced by this deployment.</description>
    <label>New Model Version</label>
    <referenceTo>Lead_Classifier_Model_Version__c</referenceTo>
    <relationshipLabel>Tune Snapshots Producing This Version</relationshipLabel>
    <relationshipName>Tune_Snapshots_Producing_This_Version</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>