force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Payload_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Payload_File_Id__c</fullName>
    <description>Reference to the Data Cloud file holding the full payload.</description>
    <label>Payload File ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>