force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Promoted_At__c.field-meta.xml
<CustomField>
    <fullName>Promoted_At__c</fullName>
    <description>When the new Classifier was promoted to Champion.</description>
    <label>Promoted At</label>
    <type>DateTime</type>
</CustomField>