force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Promoted_By__c.field-meta.xml
<CustomField>
    <fullName>Promoted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who approved Promotion.</description>
    <label>Promoted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tune Snapshots Promoted</relationshipLabel>
    <relationshipName>Tune_Snapshots_Promoted</relationshipName>
    <type>Lookup</type>
</CustomField>