force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Realized_Impact_Captured__c.field-meta.xml
<CustomField>
    <fullName>Realized_Impact_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True once realized impact has been appended.</description>
    <label>Realized Impact Captured</label>
    <type>Checkbox</type>
</CustomField>