force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Realized_Impact_Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Realized_Impact_Captured_At__c</fullName>
    <description>When realized impact was appended.</description>
    <label>Realized Impact Captured At</label>
    <type>DateTime</type>
</CustomField>