force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Realized_Impact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Realized_Impact_Summary__c</fullName>
    <label>Realized Impact Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>