force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Rollback_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if post-promotion metrics triggered automatic rollback.</description>
    <label>Rollback Triggered</label>
    <type>Checkbox</type>
</CustomField>