force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Rollback_Triggered_At__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Triggered_At__c</fullName>
    <description>When rollback was triggered.</description>
    <label>Rollback Triggered At</label>
    <type>DateTime</type>
</CustomField>