force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Snapshot_Id__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Id__c</fullName>
    <description>UUID identifying this Tune Snapshot.</description>
    <externalId>true</externalId>
    <label>Snapshot ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>