force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Synthetic_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Synthetic_External_Id__c</fullName>
    <description>External ID for synthetic data imports. Marked unique + external ID so bulk upserts can resolve foreign-key lookups from related CSVs via the Lead_Classifier_Tune_Snapshot__c__r.Synthetic_External_Id__c relationship syntax.</description>
    <externalId>true</externalId>
    <label>Synthetic External ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>