force-app/main/default/objects/Lead_Classifier_Tune_Snapshot__c/fields/Updates_Rejected_Count__c.field-meta.xml
<CustomField>
    <fullName>Updates_Rejected_Count__c</fullName>
    <description>Number of proposed updates that were rejected at review.</description>
    <label>Updates Rejected Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>